Uploaded image for project: 'Traffic Server'
  1. Traffic Server
  2. TS-3642

proxy.config.http.share_server_sessions not working

    XMLWordPrintableJSON

Details

    • Bug
    • Status: Closed
    • Major
    • Resolution: Fixed
    • 5.3.0
    • 5.3.2
    • Configuration
    • None

    Description

      Testing 5.3.0 and I noticed proxy.config.http.share_server_sessions = 1 no longer works. Saw a 10-15x increase in origin connections; there appears to be some reuse, I am seeing approximately 1.2-1.3 requests per origin connection.

      Setting "proxy.config.http.server_session_sharing.pool = global" restored expected behavior (Thanks sudheerv!)

      Attachments

        Issue Links

          Activity

            People

              psudaemon Phil Sorber
              dcarlin David Carlin
              Votes:
              0 Vote for this issue
              Watchers:
              8 Start watching this issue

              Dates

                Created:
                Updated:
                Resolved: