[TS-3642]: fix reading of proxy.config.http.share_server_sessions